# itcc-federated-data-hub

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.beam  Dockerfile.dev.datalake  Dockerfile.dev.dwh  Dockerfile.dev.ingest  README.md  deny.toml  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
dev/: datalake-compose.yml  debug-compose.yml  debug-ingest-compose.yml  dwh-compose.yaml  garage.toml  ingest-compose.yaml  reciever-compose.yaml  reciever-compose.yml  sender-compose.yaml  test-datalake-compose.yml
dev/config/: mainzelliste.conf  mainzelliste.docker.conf
dev/itcc-data-lake/: Chart.yaml  values-beam-demo.yaml  values.yaml
dev/itcc-data-lake/templates/: beam-proxy-deployment.yml  garage-config-secret.yml  garage-configmap.yml  garage-statefulset.yml  garage.yaml  omics-deployment.yml  pvc.yml  root-cert-config-secret.yml  root-cert-configmap.yml  secrets.yml  webui-deployment.yml
dev/itcc-dwh/: values-beam-demo.yaml  values.yaml
dev/itcc-dwh/templates/: _helpers.tpl  beam-proxy-deployment.yml  blaze.yaml  data-drop.yaml  garage-init.yaml  garage.yaml  meta-cache.yaml  omics-deployment-socket.yml  omics-deployment-task.yml  omics-deployment.yml  pvc.yml  secrets.yml  webui-deployment.yml
dev/itcc-omics-ingest/: Chart.yaml  values-beam-demo.yaml
dev/itcc-omics-ingest/templates/: _helpers.tpl  blaze-seed-configmap.yaml  blaze-seed-job.yaml  blaze.yaml  ingest.yaml  mainzelliste.yaml  ml-db.yaml
itcc-omics-data-lake/: Cargo.toml  Dockerfile  README.md
itcc-omics-data-lake/dev/: Dockerfile  reciever-compose.yml
itcc-omics-data-lake/dev/itcc-data-lake/: values.yaml
itcc-omics-data-lake/dev/itcc-data-lake/templates/: beam-proxy-deployment.yml  garage-service.yml  root-cert-configmap.yml
itcc-omics-data-lake/dev/itcc-data-lake/templates/tests/: test-connection.yaml
itcc-omics-data-lake/src/: lib.rs  main.rs
itcc-omics-data-lake/src/beam/: mod.rs
itcc-omics-data-lake/src/cbio_portal/: data.rs  meta.rs  mod.rs
itcc-omics-data-lake/src/data/: cbio.rs  handler.rs  mod.rs
itcc-omics-data-lake/src/s3/: mod.rs
itcc-omics-data-lake/src/utils/: config.rs
itcc-omics-data-warehouse/: .gitignore  Cargo.toml
itcc-omics-data-warehouse/src/: lib.rs  main.rs
itcc-omics-data-warehouse/src/beam/: mod.rs
itcc-omics-data-warehouse/src/cbio_portal/: meta.rs  mod.rs
itcc-omics-data-warehouse/src/data/: handler.rs  mod.rs
itcc-omics-data-warehouse/src/utils/: config.rs
itcc-omics-ingest/: Cargo.toml  Dockerfile
itcc-omics-ingest/.cargo/: config.toml
itcc-omics-ingest/dev/: Dockerfile  docker-compose.yaml  sender-compose.yaml
itcc-omics-ingest/src/: lib.rs  main.rs
itcc-omics-ingest/src/beam/: mod.rs
itcc-omics-ingest/src/controllers/: extractors.rs  health.rs  mod.rs  omics.rs  patient.rs
itcc-omics-ingest/src/data/: mod.rs  transfer.rs  validator.rs
itcc-omics-ingest/src/fhir/: handler.rs  mod.rs  resources.rs
itcc-omics-ingest/src/omics_data/: compression.rs  transfer.rs  validator.rs
itcc-omics-ingest/src/pseudonym/: handler.rs  mod.rs
itcc-omics-ingest/src/test/: blaze.rs  mod.rs  pseudonym.rs  transfer.rs
itcc-omics-ingest/src/utils/: config.rs  error_type.rs  mod.rs
itcc-omics-lib/: Cargo.toml
itcc-omics-lib/src/: error_type.rs  lib.rs
itcc-omics-lib/src/beam/: mod.rs
itcc-omics-lib/src/cbio_portal/: data.rs  meta.rs  mod.rs
itcc-omics-lib/src/dwh/: mod.rs
itcc-omics-lib/src/fhir/: blaze.rs  bundle.rs  crypto_id.rs  mod.rs  resources.rs
itcc-omics-lib/src/fhir/blaze/: get.rs  mod.rs
itcc-omics-lib/src/mainzelliste/: handler.rs  mod.rs
itcc-omics-lib/src/parquet/: handler.rs  mod.rs
itcc-omics-lib/src/patient_id/: mod.rs
itcc-omics-lib/src/s3/: client.rs  mod.rs
src/: lib.rs  main.rs  routes.rs
src/beam/: mod.rs
src/config/: mod.rs
src/controllers/: extractors.rs  health.rs  mod.rs  omics.rs
src/omics_data/: mod.rs
src/utils/: api_response.rs  config.rs  error_type.rs  mod.rs
src/validator/: mod.rs  schema.rs
