[package]
name = "omics_endpoint"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
once_cell = "1.21.3"
csv = "1.4.0"
beam-lib = { git = "https://github.com/samply/beam", branch = "push-uqnktkpvqlmk", features = ["http-util", "sockets"] }
serde_json = "1.0.145"
anyhow = "1"

[features]
beam-sender = []