[workspace]
members = [
    "itcc-omics-ingest", "itcc-omics-data-lake"
]

resolver = "2"
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
once_cell = "1.21.3"
csv = "1.4.0"
beam-lib = { git = "https://github.com/samply/beam", branch = "push-uqnktkpvqlmk", features = ["http-util", "sockets"] }
serde_json = "1.0.145"
anyhow = "1"
zstd = "0.13.3"
uuid = "1.20.0"
reqwest = "0.13.1"