[workspace]
members = ["itcc-omics-ingest", "itcc-omics-data-warehouse", "itcc-omics-lib"]

resolver = "2"
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4.5.58", features = ["derive", "env"] }
once_cell = "1.21.3"
csv = "1.4.0"
beam-lib = { git = "https://github.com/samply/beam", branch = "push-uqnktkpvqlmk", features = ["http-util", "sockets"] }
serde_json = "1.0.149"
anyhow = "1"
zstd = "0.13.3"
uuid = "1.20.0"
reqwest = { version = "0.13.2", features = ["json", "query"] }
tempfile = "3.25.0"
aws-sdk-s3 = { version =  "1.123.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-config = { version = "1.8.15", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-smithy-async = { version = "1", features = ["rt-tokio"] }
axum = { version = "0.8", features = ["json", "macros"] }
serde_bytes = "0.11"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
