[package]
name = "itcc-omics-data-lake"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
once_cell = "1.21.3"
beam-lib = { git = "https://github.com/samply/beam", branch = "push-uqnktkpvqlmk", features = ["http-util", "sockets"] }
serde_json = "1.0.145"
anyhow = "1"
aws-config = "1.8.12"
aws-sdk-s3 = "1.120.0"
tempfile = "3.24.0"
aws-credential-types = "1.2.11"