[package]
name = "itcc-omics-data-lake"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
beam-lib = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
aws-config = "1.8.12"
aws-sdk-s3 = "1.120.0"
tempfile = "3.24.0"
aws-credential-types = "1.2.11"