[package]
name = "itcc-omics-data-warehouse"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http =  { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
beam-lib = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
futures = "0.3.31"
itcc-omics-lib = { path = "../itcc-omics-lib", features = ["fhir", "s3", "beam", "dwh"] }
aws-sdk-s3 = { workspace = true }
base64 = { workspace = true }