[package]
name = "itcc-omics-ingest"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
csv = { workspace = true }
beam-lib = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
zstd = { workspace = true }
sha2 = "0.11.0-rc.4"
hex = "0.4.3"
bytes = "1.11.0"