[package]
name = "itcc-omics-ingest"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
sha2 = "0.10.9"
hex = "0.4.3"
bytes = "1.11.0"
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
csv = { workspace = true }
beam-lib = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
zstd = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
itcc-omics-lib = { workspace = true }
