[package]
name = "itcc-omics-lib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
beam-lib = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
tempfile = { workspace = true }
thiserror = "2.0.18"
serde_bytes = { workspace = true }
reqwest = { workspace = true }

[features]
fhir = []
beam = []
s3 = []
