[package]
name = "itcc-omics-lib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
beam-lib = { workspace = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
tracing = { workspace = true }
once_cell = { workspace = true }
tempfile = { workspace = true }
thiserror = "2.0.18"
serde_bytes = { workspace = true }
reqwest = { workspace = true }

[features]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
fhir = []
beam = []
