[package]
name = "itcc-omics-lib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
beam-lib = { workspace = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-smithy-async = { workspace = true, optional = true }
tracing = { workspace = true }
once_cell = { workspace = true }
tempfile = { workspace = true }
thiserror = "2.0.18"
reqwest = { workspace = true }
uuid = { version = "1.20.0", features = ["v4"] }
zstd = { workspace = true }

[features]
s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:aws-smithy-async"]
fhir = []
beam = []
ml = []
dwh = []
